# stock-market-engine

./: .gitignore  Dockerfile  README.md  TODO  bitbucket-pipelines.yml  docker-compose-dev.yml  setup.cfg
.github/workflows/: docker-image.yml
stock_market_engine/: common.py  config.py  engine.py  engine_store.py  main.py  models.py  redis.py
stock_market_engine/api/: __init__.py  indicator.py  models.py  signal.py  stock_market.py
tests/: test_api.py  test_engine.py
