[metadata]
name = stock-market-engine
version = v0.1
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://bitbucket.org/MattiasDC/{name}
platform = any

[options]
python_requires = >= 3.9
packages = find:
install_requires =
	aioredis
	fakeredis
	fastapi
	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
	uvicorn

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    black
    flake8
    isort
    nox
    pre-commit
    pytest
    yamllint

[flake8]
max-line-length = 88
exclude =
    .env
    .nox
    *.egg-info

[isort]
profile = black
skip =
    .env
    .nox
    *.egg-info