[metadata]
name = stock-market-engine
version = attr: stock_market_engine.__version__
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://github.com/MattiasDC/{name}
platform = any
long_description = stock-market-engine is a Python microservice application that serves a REST API to create/query/update a virtual stock market in time. It's build on top of the [stock-market-lib](https://bitbucket.org/MattiasDC/stock-market-lib.git) library.

[options]
python_requires = >= 3.9
packages = find:
install_requires =
	aioredis
	fastapi
    simputils==0.1.0
	stock-market-lib==0.4.0
	uvicorn

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    black
    fakeredis
    flake8
    isort
    nox
    pre-commit
    pytest
    pytest-asyncio
    yamllint


[flake8]
max-line-length = 88
exclude =
    .env
    .nox
    *.egg-info

[isort]
profile = black
skip =
    .env
    .nox
    *.egg-info

[tool:pytest]
asyncio_mode = auto
filterwarnings = 
    ignore:The localize method is no longer necessary, as this time zone supports the fold attribute